Linux Aura: Use Separate profile key specifically for theme usage

This CL is a revert to patch set 1 of CL [1].  This is necessary
because window position save/restore for the task manager relies on
the regular profile key being null for the task manager widget.

[1] https://codereview.chromium.org/2862113002/#ps1

BUG=729405
R=sky@chromium.org

Review-Url: https://codereview.chromium.org/2923323002
Cr-Commit-Position: refs/heads/master@{#477872}

Former-commit-id: 2e3beeadb7a48af2c3dd58e0ec22085fc988636b